@@ -6,7 +6,7 @@
 
   <groupId>io.github.abissell</groupId>
   <artifactId>java-util</artifactId>
-  <version>0.1</version>
+  <version>0.2-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>java-util</name>
@@ -78,6 +78,11 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
         <version>3.5.0</version>
+        <configuration>
+          <source>19</source>
+          <target>19</target>
+          <additionalOptions>--enable-preview</additionalOptions>
+        </configuration>
         <executions>
           <execution>
             <id>attach-javadocs</id>
@@ -158,4 +163,15 @@
       </build>
     </profile>
   </profiles>
+
+  <distributionManagement>
+    <snapshotRepository>
+      <id>ossrh</id>
+      <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+    </snapshotRepository>
+    <repository>
+      <id>ossrh</id>
+      <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2</url>
+    </repository>
+  </distributionManagement>
 </project>
